--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,51 @@
+version: "3.9"
+
 services:
   qdrant:
     image: qdrant/qdrant:latest
     restart: always
     container_name: qdrant
     ports:
-      - 6333:6333
-      - 6334:6334
+      - "6333:6333"
+      - "6334:6334"
     expose:
-      - 6333
-      - 6334
-      - 6335
+      - "6333"
+      - "6334"
+      - "6335"
     configs:
       - source: qdrant_config
         target: /qdrant/config/production.yaml
     volumes:
       - ./qdrant_data:/qdrant/storage
 
+  redis:
+    image: redis:7-alpine
+    container_name: rag-redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    command: redis-server --appendonly yes
+    volumes:
+      - redis_data:/data
+
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: rag-api
+    restart: unless-stopped
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    depends_on:
+      - qdrant
+      - redis
+
 configs:
   qdrant_config:
     content: |
       log_level: INFO
+
+volumes:
+  redis_data:
