--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "python-dotenv",
     "python-multipart>=0.0.22",
     "rank-bm25>=0.2.2",
+    "redis>=7.1.0",
     "torch>=2.10.0",
     "transformers",
     "uvicorn>=0.40.0",
